Android build instructions wip. Fixed h3 bullet points when line wraps on mobile.

--- a/stylesheets/dc.less
+++ b/stylesheets/dc.less
@@ -19,7 +19,7 @@ h2, h3, h4 {
 h3 {
     background-image: url('../images/title-left.png'); 
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 32px;
     padding-left: 40px;
 }
 
@@ -66,6 +66,24 @@ pre {
     top: 0;
     right: 0;
     border: 0;
+}
+
+.navbar-default .navbar-toggle .icon-bar
+{
+    background-color:black;
+}
+
+.navbar-default .navbar-toggle:focus,
+.navbar-default .navbar-toggle:visited,
+.navbar-default .navbar-toggle
+{
+    border-color:black;
+    background-color:transparent;
+}
+
+.navbar-default .navbar-toggle:hover
+{
+    background-color:#017179;
 }
 
 .navbar-default {
